--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,9 +19,9 @@ jobs:
 
     - name: Build
       run: 
-        wget --no-check-certificate --content-disposition https://github.com/apple/foundationdb/releases/download/6.3.23/foundationdb-clients-6.3.23-1.el7.x86_64.rpm
-        wget --no-check-certificate --content-disposition https://github.com/apple/foundationdb/releases/download/6.3.23/foundationdb-server-6.3.24-1.el7.x86_64.rpm
-        sudo yum localinstall foundationdb-clients-6.3.24-1.el7.x86_64.rpm
-        sudo yum localinstall foundationdb-server-6.3.24-1.el7.x86_64.rpm
-        sudo systemctl start foundationdb
+        wget --no-check-certificate --content-disposition https://github.com/apple/foundationdb/releases/download/6.3.23/foundationdb-clients_6.3.24-1_amd64.deb
+        wget --no-check-certificate --content-disposition https://github.com/apple/foundationdb/releases/download/6.3.23/foundationdb-server_6.3.24-1_amd64.deb
+        dpkg -i foundationdb-clients_6.3.24-1_amd64.deb
+        dpkg -i foundationdb-server_6.3.24-1_amd64.deb
+        systemctl start foundationdb
         go build -v ./...
