--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -6,7 +6,6 @@ on:
   workflow_dispatch:
   
 jobs:
-
   build:
     runs-on: ubuntu-latest
     steps:
@@ -16,12 +15,13 @@ jobs:
       uses: actions/setup-go@v3
       with:
         go-version: 1.18
-
-    - name: Build
+    - name: set up fdb
       run: 
         wget --no-check-certificate --content-disposition https://github.com/apple/foundationdb/releases/download/6.3.23/foundationdb-clients_6.3.24-1_amd64.deb
         wget --no-check-certificate --content-disposition https://github.com/apple/foundationdb/releases/download/6.3.23/foundationdb-server_6.3.24-1_amd64.deb
         dpkg -i foundationdb-clients_6.3.24-1_amd64.deb
         dpkg -i foundationdb-server_6.3.24-1_amd64.deb
         systemctl start foundationdb
+    - name: Build
+      run:  
         go build -v ./...
