--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -17,10 +17,10 @@ jobs:
         go-version: 1.18
     - name: set up fdb
       run: 
-        wget --no-check-certificate --content-disposition https://github.com/apple/foundationdb/releases/download/6.3.24/foundationdb-clients_6.3.24-1_amd64.deb
-        wget --no-check-certificate --content-disposition https://github.com/apple/foundationdb/releases/download/6.3.24/foundationdb-server_6.3.24-1_amd64.deb
-        dpkg -i foundationdb-clients_6.3.24-1_amd64.deb
-        dpkg -i foundationdb-server_6.3.24-1_amd64.deb
+        wget --no-check-certificate https://github.com/apple/foundationdb/releases/download/6.3.24/foundationdb-clients_6.3.24-1_amd64.deb
+        wget --no-check-certificate https://github.com/apple/foundationdb/releases/download/6.3.24/foundationdb-server_6.3.24-1_amd64.deb
+        sudo apt install ./foundationdb-clients_6.3.24-1_amd64.deb
+        sudo apt install ./foundationdb-server_6.3.24-1_amd64.deb
         systemctl start foundationdb
     - name: Build
       env: 
