--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,8 +19,8 @@ jobs:
       run: 
         wget --no-check-certificate https://github.com/apple/foundationdb/releases/download/6.3.24/foundationdb-clients_6.3.24-1_amd64.deb
         wget --no-check-certificate https://github.com/apple/foundationdb/releases/download/6.3.24/foundationdb-server_6.3.24-1_amd64.deb
-        sudo apt-get install -y ./foundationdb-clients_6.3.24-1_amd64.deb
-        sudo apt-get install -y ./foundationdb-server_6.3.24-1_amd64.deb
+        sudo apt-get -y install ./foundationdb-clients_6.3.24-1_amd64.deb
+        sudo apt-get -y install ./foundationdb-server_6.3.24-1_amd64.deb
         systemctl start foundationdb
         systemctl status foundationdb
     - name: Build
