--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -11,11 +11,12 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Set up Go
+    - name: Set up Go      
       uses: actions/setup-go@v3
       with:
         go-version: 1.18
-    - name: set up fdb
+        
+    - name: Set up fdb
       run: 
         wget --no-check-certificate https://github.com/apple/foundationdb/releases/download/6.3.24/foundationdb-clients_6.3.24-1_amd64.deb;
         wget --no-check-certificate https://github.com/apple/foundationdb/releases/download/6.3.24/foundationdb-server_6.3.24-1_amd64.deb;
@@ -23,6 +24,7 @@ jobs:
         sudo apt-get -y install ./foundationdb-server_6.3.24-1_amd64.deb;
         sudo systemctl start foundationdb;
         sudo systemctl status foundationdb
+
     - name: Build
       env: 
         GO111MODULE: on
@@ -32,3 +34,26 @@ jobs:
         go mod tidy;
         go build -v ./...;
         ./testworkflow
+   
+  test:
+    runs-on: ubuntu-latest
+    needs: build
+    secrets:
+      USER: username
+      PASSWORD: password
+    steps:
+    - name: unit test
+      run: go test ./...
+
+    - name: Deploy Stage
+      id: myRequest
+      uses: fjogeleit/http-request-action@v1
+      with:
+        url: 'http://localhost:5041/'
+        method: 'GET'
+        username: 'admin'
+        password: 'public'
+    - name: Show Response
+      run: echo ${{ steps.myRequest.outputs.response }}
+
+    - name:
